# Minesweeping

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  package-lock.json  package.json  server.js  svelte.config.js  tailwind.config.js  vite.config.ts
backend/: Cargo.toml  README.md
backend/src/: board.rs  lib.rs  main.rs  redis_client.rs  rooms.rs
backend/src/handlers/: handle_tiles.rs  join_room.rs  mod.rs  mouse_moves.rs
netlify/functions/handle_tiles/: Cargo.toml
netlify/functions/handle_tiles/src/: main.rs
src/: Cargo.toml  app.css  app.d.ts  app.html  hooks.server.ts
src/api/: join_room.rs
src/lib/: actions.ts  board.svelte  boardUtils.ts  sharedExpectations.ts  stores.ts  supabaseClient.ts  tile.svelte  utility.ts  webhook.ts
src/lib/components/: Board.svelte  BoardStats.svelte  Confetti.svelte  ConfettiStage.svelte  Controller.ts  Cursor.svelte  Icon.svelte  PlayerList.svelte  Tile.svelte  Toaster.svelte
src/lib/components/BoardComponents/: Board.svelte  BoardSettings.svelte  BoardStats.svelte  Tile.svelte
src/lib/components/Confetti/: ConfettiStage.svelte
src/lib/components/Player/: LobbyPlayerList.svelte  PlayerList.svelte
src/lib/server/: board.ts  multiplayer.ts  rooms.ts  supabaseClient.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +server.ts
src/routes/[roomId]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/[roomId]/playing/: +page.svelte
src/routes/api/playing/: +server.ts
src/routes/api/room/: +page.server.ts
src/routes/nickname/: +page.server.ts  +page.svelte
src/routes/playing/: +page.svelte
src/routes/rooms/[roomId]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/rooms/nickname/: +page.server.ts  +page.svelte
(+77 files in other folders)
