[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
socketioxide = { version = "0.14.0", features = ["state", "extensions"] }
tokio = { version = "1.38.0", features = ["full"] }
redis-macros = "0.3.0"
uuid = { version = "1.9.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.38"
