[package]
name = "handle_tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.15.1"
dotenv = "0.15.0"
http = "1.1.0"
lambda_runtime = "0.12.0"
postgrest = "1.6.0"
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
util = { path = "../../lib/util" }
board = { path = "../../lib/board" }
